syntax = "proto3";

option csharp_namespace = "MILANO.DistributedCache.Shared.Protos";

service CacheService {
  rpc Get (GrpcCacheGetRequest) returns (GrpcCacheGetResponse);
  rpc Set (GrpcCacheSetRequest) returns (GrpcCacheSetResponse);
  rpc Remove (GrpcCacheRemoveRequest) returns (GrpcCacheRemoveResponse);
  rpc Exists (GrpcCacheExistsRequest) returns (GrpcCacheExistsResponse);
  rpc Count (GrpcCacheCountRequest) returns (GrpcCacheCountResponse);
  rpc Dump (GrpcCacheDumpRequest) returns (GrpcCacheDumpResponse);
}

message GrpcCacheGetRequest {
  string key = 1;
}

message GrpcCacheGetResponse {
  string key = 1;
  string value = 2;
  bool found = 3;
}

message GrpcCacheSetRequest {
  string key = 1;
  string value = 2;
  int32 expirationSeconds = 3;
}

message GrpcCacheSetResponse {
  bool success = 1;
}

message GrpcCacheRemoveRequest {
  string key = 1;
}

message GrpcCacheRemoveResponse {
  bool success = 1;
}

message GrpcCacheExistsRequest {
  string key = 1;
}

message GrpcCacheExistsResponse {
  bool exists = 1;
}

message GrpcCacheCountRequest {
}

message GrpcCacheCountResponse {
  int32 count = 1;
}

message GrpcCacheDumpRequest {
  bool includeExpired = 1;
}

message GrpcCacheDumpResponse {
  map<string, string> entries = 1;
}